✨ (App.vue): Add Contact component to the main App component to display a new section for contact information 📝 (ContactHeader.vue, TheContact.vue): Add ContactHeader component and TheContact component to create a new section for contact information 🔧 (TheHeader.vue, TheProjects.vue, TheSkills.vue): Update padding values to improve layout consistency 🔧 (base.scss): Remove unnecessary padding from the body element to prevent horizontal scrolling

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -5,7 +5,7 @@ html {
 body {
   background-color: $black-color;
   color: $white-color;
-  padding: 0 16px;
+  padding: 0;
   overflow-x: hidden;
 }
 
